--- a/PROYEC.HTML
+++ b/PROYEC.HTML
@@ -16,7 +16,7 @@
 
     <header class="header">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-ligh t" style="background-color: green">
   <a class="navbar-brand" href="https://mail.google.com/mail/u/0/#inbox/FMfcgxwJZJXZZvqlWCBFKWbQDjLFFDvZ">LAS MEJORES NOTICIAS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
