--- a/PROYEC.HTML
+++ b/PROYEC.HTML
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
-    <title>El noti de HOY</title>
+    <title>MIAL NOTICAS</title>
   </head>
   <body>
 
     <header class="header">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-ligh t" style="background-color: green">
-  <a class="navbar-brand" href="https://mail.google.com/mail/u/0/#inbox/FMfcgxwJZJXZZvqlWCBFKWbQDjLFFDvZ">LAS MEJORES NOTICIAS</a>
+  <a class="navbar-brand" href="PROYEC.HTML">MIALNOTICIAS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -33,17 +33,15 @@
           DESPLEGABLE
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">DEPORTES</a>
-          <a class="dropdown-item" href="#">SALUD</a>
+          <a class="dropdown-item" href="DEPORTES.HTML">DEPORTES</a>
+          <a class="dropdown-item" href="SALUD.HTML">SALUD</a>
           <a class="dropdown-item" href="#">POLITICA</a>
           <a class="dropdown-item" href="#">NACIONAL</a>
-          <div class="dropdown-divider"></div>
+          <div class="dropdown-divider">que ondaa</div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -56,7 +54,7 @@
 
 <main class="bg-success row align-items-center justify-content-center">
     <div class="card" style="width: 18rem;">
-  <img src="virus.jpg" class="card-img-top" alt="...">
+  <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h1 class="card-title">El virus en avellaneda</h1>
     <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
@@ -64,7 +62,7 @@
   </div>
 </div>
 <div class="card" style="width: 18rem;">
-<img src="virus.jpg" class="card-img-top" alt="...">
+<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h1 class="card-title">El virus en avellaneda1</h1>
 <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
@@ -72,7 +70,7 @@
 </div>
 </div>
 <div class="card" style="width: 18rem;">
-<img src="virus.jpg" class="card-img-top" alt="...">
+<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h1 class="card-title">El virus en avellaneda2</h1>
 <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
@@ -80,7 +78,7 @@
 </div>
 </div>
 <div class="card" style="width: 18rem;">
-<img src="virus.jpg" class="card-img-top" alt="...">
+<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h1 class="card-title">El virus en avellaneda3</h1>
 <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
@@ -88,7 +86,7 @@
 </div>
 </div>
 <div class="card" style="width: 18rem;">
-<img src="virus.jpg" class="card-img-top" alt="...">
+<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h1 class="card-title">El virus en avellaneda3</h1>
 <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
@@ -96,7 +94,7 @@
 </div>
 </div>
 <div class="card" style="width: 18rem;">
-<img src="virus.jpg" class="card-img-top" alt="...">
+<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h1 class="card-title">El virus en avellaneda3</h1>
 <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
@@ -104,7 +102,7 @@
 </div>
 </div>
 <div class="card" style="width: 18rem;">
-<img src="virus.jpg" class="card-img-top" alt="...">
+<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h1 class="card-title">El virus en avellaneda3</h1>
 <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
@@ -112,7 +110,7 @@
 </div>
 </div>
 <div class="card" style="width: 18rem;">
-<img src="virus.jpg" class="card-img-top" alt="...">
+<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h1 class="card-title">El virus en avellaneda3</h1>
 <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
