cambie el proyecto

--- a/PROYEC.HTML
+++ b/PROYEC.HTML
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-ligh t" style="background-color: green">
       <a class="navbar-brand logo" href="PROYEC.HTML"><img src="MIALNOTICIAS1.PNG" alt="" /></a>
-      
+
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -128,7 +128,7 @@
     <li class="page-item disabled">
       <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="DEPORTES.HTML">1</a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item">
