--- a/PROYEC.HTML
+++ b/PROYEC.HTML
@@ -26,13 +26,10 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="">INICIO <span class="sr-only">(current)</span></a>
-      </li>
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          DESPLEGABLE
+          SECCIONES
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="DEPORTES.HTML">DEPORTES</a>
@@ -40,15 +37,12 @@
           <a class="dropdown-item" href="#">POLITICA</a>
           <a class="dropdown-item" href="#">NACIONAL</a>
           <div class="dropdown-divider">que ondaa</div>
-          <a class="dropdown-item" href="#">Something else here</a>
+
         </div>
       </li>
 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">BUSCADOR</button>
-    </form>
+
   </div>
 </nav>
 </header>
