edite las secciones

--- a/PROYEC.HTML
+++ b/PROYEC.HTML
@@ -35,7 +35,8 @@
           <a class="dropdown-item" href="DEPORTES.HTML">DEPORTES</a>
           <a class="dropdown-item" href="SALUD.HTML">SALUD</a>
           <a class="dropdown-item" href="#">POLITICA</a>
-          <a class="dropdown-item" href="#">NACIONAL</a>
+          <a class="dropdown-item" href="#">ENTRETENIMIENTO</a>
+          <a class="dropdown-item" href="#">ECONOMIA</a>
           <div class="dropdown-divider">que ondaa</div>
 
         </div>
