--- a/PROYEC.HTML
+++ b/PROYEC.HTML
@@ -37,7 +37,6 @@
           <a class="dropdown-item" href="#">POLITICA</a>
           <a class="dropdown-item" href="#">ENTRETENIMIENTO</a>
           <a class="dropdown-item" href="#">ECONOMIA</a>
-          <div class="dropdown-divider">que ondaa</div>
 
         </div>
       </li>
@@ -47,6 +46,7 @@
   </div>
 </nav>
 </header>
+
 
 
 <main class="bg-success row align-items-center justify-content-center">
@@ -82,58 +82,11 @@
 <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
 </div>
 </div>
-<div class="card" style="width: 18rem;">
-<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-<div class="card-body">
-<h1 class="card-title">El virus en avellaneda3</h1>
-<p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-<a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
-</div>
-</div>
-<div class="card" style="width: 18rem;">
-<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-<div class="card-body">
-<h1 class="card-title">El virus en avellaneda3</h1>
-<p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-<a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
-</div>
-</div>
-<div class="card" style="width: 18rem;">
-<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-<div class="card-body">
-<h1 class="card-title">El virus en avellaneda3</h1>
-<p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-<a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
-</div>
-</div>
-<div class="card" style="width: 18rem;">
-<img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-<div class="card-body">
-<h1 class="card-title">El virus en avellaneda3</h1>
-<p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-<a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
-</div>
-</div>
-
 
 </main>
 
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="DEPORTES.HTML">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#">Next</a>
-    </li>
-  </ul>
-</nav>
-
 <!-- Footer -->
-<footer class="page-footer font-small special-color-dark pt-4">
+<footer class="page-footer font-small  bg-dark pt-4">
 
   <!-- Footer Elements -->
   <div class="container">
@@ -142,27 +95,27 @@
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
         <a class="btn-floating btn-fb mx-1">
-          <i class="fab fa-facebook-f"> </i>
+          <a href="#">Facebook</a>
         </a>
+
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-tw mx-1">
-          <i class="fab fa-twitter"> </i>
+          <a href="#">Whatsapp</a>
+
         </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-gplus mx-1">
-          <i class="fab fa-google-plus-g"> </i>
-        </a>
+
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-li mx-1">
-          <i class="fab fa-linkedin-in"> </i>
+          <a href="#">Youtube</a>
+
         </a>
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-dribbble mx-1">
-          <i class="fab fa-dribbble"> </i>
+          <a href="https://www.instagram.com/?hl=es-la">Instagram</a>
+
         </a>
       </li>
     </ul>
@@ -172,13 +125,14 @@
   <!-- Footer Elements -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:MIALNOTICIAS
+    <a href="PROYEC.HTML"> MIALNOTICAS</a>
   </div>
   <!-- Copyright -->
 
 </footer>
 <!-- Footer -->
+
 
 
     <!-- Optional JavaScript -->
