Edite la seccion salud

--- a/SALUD.HTML
+++ b/SALUD.HTML
@@ -4,40 +4,166 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="salud.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="PROYEC.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
-    <title>MIAL NOTICAS</title>
+    <title>MIAL NOTICAS/salud</title>
   </head>
   <body>
 
     <header class="header">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-ligh t" style="background-color: green">
-  <a class="navbar-brand" href="PROYEC.HTML">LAS MEJORES NOTICIAS</a>
+      <a class="navbar-brand logo" href="PROYEC.HTML"><img src="MIALNOTICIAS1.PNG" alt="" /></a>
+
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="">INICIO <span class="sr-only">(current)</span></a>
-      </li>
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          DESPLEGABLE
+          secciones
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="DEPORTES.HTML">DEPORTES</a>
-          <a class="dropdown-item" href="#">SALUD</a>
           <a class="dropdown-item" href="#">POLITICA</a>
-          <a class="dropdown-item" href="#">NACIONAL</a>
-          <div class="dropdown-divider">que ondaa</div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">ENTRETENIMIENTO</a>
+          <a class="dropdown-item" href="#">ECONOMIA</a>
+
+
         </div>
       </li>
+
+    </ul>
+
+  </div>
+</nav>
+</header>
+
+
+
+  <main class="bg-success row align-items-center justify-content-center">
+          <div class="card" style="width: 18rem;">
+        <img src="covid.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h1 class="card-title">1.000.000  de casos en Argentina</h1>
+          <p class="card-text">Siguen creciendo los contagios por covid en el país</p>
+          <a href="noticiaderobo.html" class="btn btn-primary">ver mas</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+      <img src="trump.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+      <h2 class="card-title">Donald Trump, positivo de COVID-19</h1>
+      <p class="card-text">Actualmente se encuentra en el Centro Médico Militar Walter Reed por precaución.</p>
+      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">ver mas</a>
+      </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+      <h1 class="card-title">El virus en avellaneda2</h1>
+      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
+      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
+      </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+      <h1 class="card-title">El virus en avellaneda3</h1>
+      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
+      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
+      </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+      <h1 class="card-title">El virus en avellaneda3</h1>
+      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
+      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
+      </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+      <h1 class="card-title">El virus en avellaneda3</h1>
+      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
+      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
+      </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+      <h1 class="card-title">El virus en avellaneda3</h1>
+      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
+      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
+      </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+      <h1 class="card-title">El virus en avellaneda3</h1>
+      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
+      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
+      </div>
+      </div>
+
+
+  </main>
+
+
+  <!-- Footer -->
+  <footer class="page-footer font-small  bg-dark pt-4">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a class="btn-floating btn-fb mx-1">
+            <a href="#">Facebook</a>
+          </a>
+
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-tw mx-1">
+            <a href="#">Whatsapp</a>
+
+          </a>
+
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-li mx-1">
+            <a href="#">Youtube</a>
+
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-dribbble mx-1">
+            <a href="https://www.instagram.com/?hl=es-la">Instagram</a>
+
+          </a>
+        </li>
+      </ul>
+      <!-- Social buttons -->
+
+    </div>
+    <!-- Footer Elements -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:MIALNOTICIAS
+      <a href="PROYEC.HTML"> MIALNOTICAS</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
