Agregue los iconos para el footer

--- a/PROYEC.HTML
+++ b/PROYEC.HTML
@@ -95,26 +95,27 @@
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
         <a class="btn-floating btn-fb mx-1">
-          <a href="#">Facebook</a>
+          <a href="https://www.facebook.com/"><img class="face"  src="facebook.png" alt=""></a>
         </a>
 
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-tw mx-1">
-          <a href="#">Whatsapp</a>
+          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="whatsapp.png" alt=""></a>
+
 
         </a>
 
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-li mx-1">
-          <a href="#">Youtube</a>
+          <a href="https://www.youtube.com/"><img class="yout"  src="youtube.png" alt=""></a>
 
         </a>
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-dribbble mx-1">
-          <a href="https://www.instagram.com/?hl=es-la">Instagram</a>
+          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="instagram.png" alt=""></a>
 
         </a>
       </li>
