--- a/SALUD.HTML
+++ b/SALUD.HTML
@@ -4,10 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="salud.css">
+
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="PROYEC.css">
+    <link rel="stylesheet" href="salud.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
@@ -29,15 +29,15 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          secciones
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="true">
+          SECCIONES
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="DEPORTES.HTML">DEPORTES</a>
+        <div class="dropdown-menu show" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item " href="DEPORTES.HTML">DEPORTES</a>
+          <a class="dropdown-item" href="">SALUD</a>
           <a class="dropdown-item" href="#">POLITICA</a>
           <a class="dropdown-item" href="#">ENTRETENIMIENTO</a>
           <a class="dropdown-item" href="#">ECONOMIA</a>
-
 
         </div>
       </li>
@@ -54,7 +54,7 @@
           <div class="card" style="width: 18rem;">
         <img src="covid.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h1 class="card-title">1.000.000  de casos en Argentina</h1>
+          <h1 class="card-title">1.00</h1>
           <p class="card-text">Siguen creciendo los contagios por covid en el país</p>
           <a href="noticiaderobo.html" class="btn btn-primary">ver mas</a>
         </div>
