--- a/PROYEC.HTML
+++ b/PROYEC.HTML
@@ -24,6 +24,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
@@ -39,11 +40,43 @@
           <a class="dropdown-item" href="#">ECONOMIA</a>
 
         </div>
+
       </li>
 
+
+    </ul>
+    <ul class="list-unstyled list-inline text-center">
+      <li class="list-inline-item">
+        <a class="btn-floating btn-fb mx-1">
+          <a href="https://www.facebook.com/"><img class="face"  src="facebook.png" alt=""></a>
+        </a>
+
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-tw mx-1">
+          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="whatsapp.png" alt=""></a>
+
+
+        </a>
+
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-li mx-1">
+          <a href="https://www.youtube.com/"><img class="yout"  src="youtube.png" alt=""></a>
+
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-dribbble mx-1">
+          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="instagram.png" alt=""></a>
+
+        </a>
+      </li>
     </ul>
 
+
   </div>
+
 </nav>
 </header>
 
