HICE BASTANTES CABMIOS SOLO FALTA LAS NOTICAS

--- a/HTML Y CSS/SALUD.HTML
+++ b/HTML Y CSS/SALUD.HTML
@@ -7,7 +7,7 @@
 
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="salud.css">
+    <link rel="stylesheet" href="style-de-secciones.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
@@ -18,7 +18,7 @@
     <header class="header">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-ligh t" style="background-color: green">
-      <a class="navbar-brand logo" href="PROYEC.HTML"><img src="MIALNOTICIAS1.PNG" alt="" /></a>
+      <a class="navbar-brand logo" href="PROYEC.HTML"><img src="IMAGENES/MIALNOTICIAS1.PNG" alt="" /></a>
 
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,19 +29,48 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="true">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           SECCIONES
         </a>
-        <div class="dropdown-menu show" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item " href="DEPORTES.HTML">DEPORTES</a>
-          <a class="dropdown-item" href="">SALUD</a>
-          <a class="dropdown-item" href="#">POLITICA</a>
-          <a class="dropdown-item" href="#">ENTRETENIMIENTO</a>
-          <a class="dropdown-item" href="#">ECONOMIA</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
+          <a class="dropdown-item" href="SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
+          <a class="dropdown-item" href="POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
+          <a class="dropdown-item" href="ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
+          <a class="dropdown-item" href="ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
 
         </div>
+
       </li>
 
+    </ul>
+    <ul class="list-unstyled list-inline text-center">
+      <li class="list-inline-item">
+        <a class="btn-floating btn-fb mx-1">
+          <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/facebook.png" alt=""></a>
+        </a>
+
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-tw mx-1">
+          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/whatsapp.png" alt=""></a>
+
+
+        </a>
+
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-li mx-1">
+          <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/youtube.png" alt=""></a>
+
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-dribbble mx-1">
+          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/instagram.png" alt=""></a>
+
+        </a>
+      </li>
     </ul>
 
   </div>
@@ -52,7 +81,7 @@
 
   <main class="bg-success row align-items-center justify-content-center">
           <div class="card" style="width: 18rem;">
-        <img src="covid.jpg" class="card-img-top" alt="...">
+        <img src="IMAGENES/covid.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h1 class="card-title">1.00</h1>
           <p class="card-text">Siguen creciendo los contagios por covid en el país</p>
@@ -60,7 +89,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-      <img src="trump.jpg" class="card-img-top" alt="...">
+      <img src="IMAGENES/trump.jpg" class="card-img-top" alt="...">
       <div class="card-body">
       <h2 class="card-title">Donald Trump, positivo de COVID-19</h1>
       <p class="card-text">Actualmente se encuentra en el Centro Médico Militar Walter Reed por precaución.</p>
@@ -83,38 +112,8 @@
       <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
       </div>
       </div>
-      <div class="card" style="width: 18rem;">
-      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-      <h1 class="card-title">El virus en avellaneda3</h1>
-      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
-      </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-      <h1 class="card-title">El virus en avellaneda3</h1>
-      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
-      </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-      <h1 class="card-title">El virus en avellaneda3</h1>
-      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
-      </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-      <h1 class="card-title">El virus en avellaneda3</h1>
-      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
-      </div>
-      </div>
+
+
 
 
   </main>
@@ -130,26 +129,27 @@
       <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
           <a class="btn-floating btn-fb mx-1">
-            <a href="#">Facebook</a>
+            <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/facebook.png" alt=""></a>
           </a>
 
         </li>
         <li class="list-inline-item">
           <a class="btn-floating btn-tw mx-1">
-            <a href="#">Whatsapp</a>
+            <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/whatsapp.png" alt=""></a>
+
 
           </a>
 
         </li>
         <li class="list-inline-item">
           <a class="btn-floating btn-li mx-1">
-            <a href="#">Youtube</a>
+            <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/youtube.png" alt=""></a>
 
           </a>
         </li>
         <li class="list-inline-item">
           <a class="btn-floating btn-dribbble mx-1">
-            <a href="https://www.instagram.com/?hl=es-la">Instagram</a>
+            <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/instagram.png" alt=""></a>
 
           </a>
         </li>
@@ -157,7 +157,6 @@
       <!-- Social buttons -->
 
     </div>
-    <!-- Footer Elements -->
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:MIALNOTICIAS
@@ -167,3 +166,9 @@
 
   </footer>
   <!-- Footer -->
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+</body>
+</html>
