--- a/HTML Y CSS/PROYEC.HTML
+++ b/HTML Y CSS/PROYEC.HTML
@@ -17,7 +17,7 @@
     <header class="header">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-ligh t" style="background-color: green">
-      <a class="navbar-brand logo" href="PROYEC.HTML"><img src="MIALNOTICIAS1.PNG" alt="" /></a>
+      <a class="navbar-brand logo" href="PROYEC.HTML"><img src="IMAGENES/MIALNOTICIAS1.png" alt="" /></a>
 
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,11 +33,11 @@
           SECCIONES
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="DEPORTES.HTML">DEPORTES</a>
-          <a class="dropdown-item" href="SALUD.HTML">SALUD</a>
-          <a class="dropdown-item" href="#">POLITICA</a>
-          <a class="dropdown-item" href="#">ENTRETENIMIENTO</a>
-          <a class="dropdown-item" href="#">ECONOMIA</a>
+          <a class="dropdown-item" href="DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
+          <a class="dropdown-item" href="SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
+          <a class="dropdown-item" href="POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
+          <a class="dropdown-item" href="ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
+          <a class="dropdown-item" href="ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
 
         </div>
 
@@ -48,13 +48,13 @@
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
         <a class="btn-floating btn-fb mx-1">
-          <a href="https://www.facebook.com/"><img class="face"  src="facebook.png" alt=""></a>
+          <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/facebook.png" alt=""></a>
         </a>
 
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-tw mx-1">
-          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="whatsapp.png" alt=""></a>
+          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/whatsapp.png" alt=""></a>
 
 
         </a>
@@ -62,13 +62,13 @@
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-li mx-1">
-          <a href="https://www.youtube.com/"><img class="yout"  src="youtube.png" alt=""></a>
+          <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/youtube.png" alt=""></a>
 
         </a>
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-dribbble mx-1">
-          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="instagram.png" alt=""></a>
+          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/instagram.png" alt=""></a>
 
         </a>
       </li>
@@ -128,13 +128,13 @@
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
         <a class="btn-floating btn-fb mx-1">
-          <a href="https://www.facebook.com/"><img class="face"  src="facebook.png" alt=""></a>
+          <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/facebook.png" alt=""></a>
         </a>
 
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-tw mx-1">
-          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="whatsapp.png" alt=""></a>
+          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/whatsapp.png" alt=""></a>
 
 
         </a>
@@ -142,13 +142,13 @@
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-li mx-1">
-          <a href="https://www.youtube.com/"><img class="yout"  src="youtube.png" alt=""></a>
+          <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/youtube.png" alt=""></a>
 
         </a>
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-dribbble mx-1">
-          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="instagram.png" alt=""></a>
+          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/instagram.png" alt=""></a>
 
         </a>
       </li>
