--- a/HTML Y CSS/SALUD.HTML
+++ b/HTML Y CSS/SALUD.HTML
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="salud.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,18 +18,18 @@
 
     <header class="header">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-ligh t" style="background-color: green">
-      <a class="navbar-brand logo" href="PROYEC.HTML"><img src="IMAGENES/MIALNOTICIAS1.PNG" alt="" /></a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-ligh t" style="background-color: green">
+        <a class="navbar-brand logo" href="PROYEC.HTML"><img src="IMAGENES/MIALNOTICIAS1.PNG" alt="" /></a>
 
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
 
-      <li class="nav-item dropdown">
+        <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           SECCIONES
         </a>
@@ -39,7 +40,7 @@
           <a class="dropdown-item" href="ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
           <a class="dropdown-item" href="ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
 
-        </div>
+      </div>
 
       </li>
 
@@ -79,38 +80,43 @@
 
 
 
-  <main class="bg-success row align-items-center justify-content-center">
+<main class="bg-success row align-items-center justify-content-center">
+
+      <div class="card" style="width: 18rem;">
+            <img src="IMAGENES/covid.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h1 class="card-title">1.000.000 de casos de covid</h1>
+            <p class="card-text">Siguen creciendo los contagios por covid en el país.</p>
+            <a href="noticiaderobo.html" class="btn btn-outline-primary btn-block">Ver mas</a>
+      </div>
+
+      </div>
           <div class="card" style="width: 18rem;">
-        <img src="IMAGENES/covid.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h1 class="card-title">1.00</h1>
-          <p class="card-text">Siguen creciendo los contagios por covid en el país</p>
-          <a href="noticiaderobo.html" class="btn btn-primary">ver mas</a>
-        </div>
+          <img src="IMAGENES/trump.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+          <h1 class="card-title">Donald Trump, positivo de COVID-19</h1>
+          <p class="card-text">Actualmente se encuentra en el Centro Médico Militar Walter Reed por precaución.</p>
+          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
-      <div class="card" style="width: 18rem;">
-      <img src="IMAGENES/trump.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-      <h2 class="card-title">Donald Trump, positivo de COVID-19</h1>
-      <p class="card-text">Actualmente se encuentra en el Centro Médico Militar Walter Reed por precaución.</p>
-      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">ver mas</a>
+
       </div>
+          <div class="card" style="width: 18rem;">
+          <img src="IMAGENES/anciano.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+          <h1 class="card-title">Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos</h1>
+          <p class="card-text">La fecha estimativa de regreso se hará efectiva una vez finalizada las capacitaciones y entregados los kits sanitizantes para todos los centros de salud.</p>
+          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
-      <div class="card" style="width: 18rem;">
-      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-      <h1 class="card-title">El virus en avellaneda2</h1>
-      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
+
       </div>
+          <div class="card" style="width: 18rem;">
+          <img src="IMAGENES/ministro.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+          <h1 class="card-title">Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud"</h1>
+          <p class="card-text">"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud", dijo el ministro de Salud, Ginés González García, quien se declaró "optimista".</p>
+          <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
-      <div class="card" style="width: 18rem;">
-      <img src="https://www.lavanguardia.com/r/GODO/LV/p7/WebSite/2020/02/10/Recortada/LV_20121218_LV_FOTOS_D_54356470898-k9s-U473420975426r2G-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-      <h1 class="card-title">El virus en avellaneda3</h1>
-      <p class="card-text">despues de mucho tiempo de cuarentena aparece el coronavirus en la ciudad</p>
-      <a href="https://www.reconquistahoy.com/43357-la-municipalidad-de-avellaneda-no-atiende-al-publico-este-lunes-y-martes-por-los-contagios-del-covid-y-el-intendente-impuso-mas-sanciones-incluso-a-un-funcionario" class="btn btn-primary">Informacion completa</a>
-      </div>
+
       </div>
 
 
