--- a/HTML Y CSS/SALUD.HTML
+++ b/HTML Y CSS/SALUD.HTML
@@ -94,7 +94,9 @@
           <div class="card" style="width: 18rem;">
           <img src="IMAGENES/trump.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-          <h1 class="card-title">Donald Trump, positivo de COVID-19</h1>
+          <h1 class="card-title" <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Donald Trump, positivo de COVID-19">
+
+</button>Donald Trump, positivo de COVID-19</h1>
           <p class="card-text">Actualmente se encuentra en el Centro Médico Militar Walter Reed por precaución.</p>
           <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
